Fixes #1028: Removes extra space before Description card (#1034)

--- a/src/components/SkillPage/SkillListing.css
+++ b/src/components/SkillPage/SkillListing.css
@@ -9,7 +9,7 @@ abbr[title] {
 }
 
 .avatar-meta {
-    min-height: 200px;
+    min-height: 150px;
 }
 
 .avatar {
@@ -44,11 +44,11 @@ abbr[title] {
 }
 
 .margin-b-md {
-    margin-bottom: 24px;
+    margin-bottom: 16px;
 }
 
 .margin-t-md {
-    margin-top: 24px;
+    margin-top: 16px;
 }
 
 .skill_listing_container {
